# cjm-media-plugin-system

./: README.md  analysis_interface.html  analysis_interface.html.md  core.html  core.html.md  index.html  index.html.md  processing_interface.html  processing_interface.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  storage.html  storage.html.md
cjm_media_plugin_system/: _modidx.py  analysis_interface.py  core.py  processing_interface.py  storage.py
nbs/: analysis_interface.ipynb  core.ipynb  index.ipynb  nbdev.yml  processing_interface.ipynb  storage.ipynb
