[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-media-plugin-system"
dynamic = ["version"]
description = "Defines standardized interfaces and data structures for media analysis (VAD, Scene Detection) and processing (FFmpeg, Conversion) plugins within the cjm-plugin-system ecosystem."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm_plugin_system']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-media-plugin-system"
Documentation = "https://cj-mills.github.io/cjm-media-plugin-system"

[project.entry-points.nbdev]
cjm_media_plugin_system = "cjm_media_plugin_system._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_media_plugin_system.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_media_plugin_system"]

[tool.nbdev]
